# exa-cli

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
.planning/: ROADMAP.md  STATE.md
.planning/quick/260402-2fq-create-tests-for-all-cli-functionalities/: 260402-2fq-PLAN.md  260402-2fq-SUMMARY.md
skills/: SKILL.md
src/exa_cli/: __init__.py  client.py  config.py  errors.py  formatters.py  main.py  models.py
src/exa_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/exa_cli/commands/: answer.py  auth.py  contents.py  find_similar.py  research.py  search.py
tests/: conftest.py  test_client.py  test_commands.py  test_config.py  test_contents.py  test_formatters.py  test_search.py
